Use position:static in sidebar dialog to prevent scrollbars
Bug: T394094

--- a/src/ui/styles/windowmanagers/ve.ui.SidebarDialogWindowManager.less
+++ b/src/ui/styles/windowmanagers/ve.ui.SidebarDialogWindowManager.less
@@ -7,4 +7,12 @@
 .ve-ui-sidebarDialogWindowManager {
 	display: flex;
 	z-index: 1;
+
+	> .oo-ui-window > .oo-ui-window-frame > .oo-ui-window-content {
+		position: static;
+
+		> .oo-ui-window-body {
+			position: static;
+		}
+	}
 }
